<?xml version="1.0" encoding="utf-8"?>
<ScrollView  android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back" />



    </LinearLayout>
    
    
    <!-- ROW 1 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <!-- ROW 2 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/age" />

        <EditText
            android:id="@+id/ageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:inputType="number"
            android:width="35dp" />

        <Spinner
            android:id="@+id/genderTxt"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.15" />

        <Spinner
            android:id="@+id/bloodTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.48" />
    </LinearLayout>

    <!-- ROW 3 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <EditText
            android:id="@+id/htTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/wtTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" />
    </LinearLayout>

    <!-- ROW 4 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse" />

        <EditText
            android:id="@+id/pulseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bp" />

        <EditText
            android:id="@+id/bpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10" />
    </LinearLayout>

    <!-- ROW 5 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cholesterol" />

        <EditText
            android:id="@+id/chlTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.83" />
    </LinearLayout>

    <!-- ROW 6 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone no" />

        <EditText
            android:id="@+id/phone_noTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.99" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <!-- ROW 7 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/uploadBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="Photo" />

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp" />

    </LinearLayout>

    <!-- ROW 8 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="29dp"
            android:layout_marginLeft="21dp"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>

</ScrollView>